--- a/index_contex.html
+++ b/index_contex.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Insert title here</title>
 
-<link href="bootstrap-3.3.7/css/bootstrap.min.css" rel="stylesheet">
+<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <link href="css/blog.css" rel="stylesheet">
 
 </head>
