--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container">
 			<nav class="blog-nav">
 				<a class="blog-nav-item active" href="index.html">Home</a>
-				<a class="blog-nav-item" href="javascript:void(0);" onclick="category('java')">Java</a>
+				<a class="blog-nav-item jk_category" href="java">Java</a>
 			</nav>
 		</div>
 	</div>
@@ -25,8 +25,7 @@
 	<div class="container">
 		<div class="row blog-header">
 			<div class="col-sm-8 blog-main">
-				<div id="loading" style="display: none;"><b>正在加载中。。。</b></div>
-				<iframe id="frame_context" name="frame_context" src="index_contex.html" width="100%" height="100px" frameborder="0" scrolling="no" onload="iframeLoad();"></iframe>
+				<iframe id="frame_context" name="frame_context" src="index_contex.html" width="100%" height="" frameborder="0" scrolling="no" onload="iframeLoad();"></iframe>
 			</div>
 			
 			<div class="col-sm-3 col-sm-offset-1 blog-sidebar">
@@ -37,49 +36,22 @@
 					</p>
 				</div>
 				<div id="category_content" class="sidebar-module">
-					<!-- <h4>java</h4>
-					<ol class="list-unstyled">
-						<li><a href="html/java/java-003.html" target="frame_context">jxl Excel的使用</a></li>
-					</ol> -->
+					
 				</div>
 			</div>
 		</div>
 	</div><!-- /.container -->
 	
 	<script src="jQuery/jquery-3.1.1.min.js"></script>
+	<script src="js/index.js"></script>
 	<script type="text/javascript">
 	// 处理ifream加载
 	function iframeLoad() {
 		var iframe = document.getElementById("frame_context");
-		if (iframe.attachEvent){
-		    iframe.attachEvent("onload", function(){  
-		    document.getElementById("loading").style.display="none";  
-		    });   
-		} else {   
-		    iframe.onload = function(){  
-		    document.getElementById("loading").style.display="none";  
-		    };   
-		}
-		
-		try {
-			document.getElementById("frame_context").height=0;
-		    document.getElementById("frame_context").height=document.getElementById("frame_context").contentWindow.document.body.scrollHeight;
-		} catch(ex) {
-			document.getElementById("frame_context").height=900;
-		}
-	}
-	// 分类标题
-	function category(cname) {
-		var html = '';
-		$.getJSON("json/"+cname+".json", function(jsonData) {
-			html += '<h4>'+cname+'</h4>';
-			html += '<ol class="list-unstyled">';
-			$.each(jsonData, function(dataIndex, data) {
-				html += '<li><a href="'+data.url+'" target="frame_context">'+data.name+'</a></li>';
-			})
-			html += '</ol>';
-			$('#category_content').append(html);
-		})
+		var bHeight = iframe.contentWindow.document.body.scrollHeight;
+		var dHeight = iframe.contentWindow.document.documentElement.scrollHeight;
+		var height = Math.max(bHeight, dHeight);
+		iframe.height = height;
 	}
 	</script>
 </body>
