--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			<nav class="blog-nav">
 				<a class="blog-nav-item active" href="index.html">Home</a>
 				<a class="blog-nav-item jk_category" href="java">Java</a>
+				<a class="blog-nav-item jk_category" href="database">数据库</a>
 			</nav>
 		</div>
 	</div>
