--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 				<a class="blog-nav-item active" href="index.html">Home</a>
 				<a class="blog-nav-item jk_category" href="java">Java</a>
 				<a class="blog-nav-item jk_category" href="database">数据库</a>
+				<a class="blog-nav-item jk_category" href="linux">Linux</a>
 			</nav>
 		</div>
 	</div>
