--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<div class="sidebar-module sidebar-module-inset">
 					<h4>About</h4>
 					<p>
-						welcome to acezk blog!!
+						welcome to Jokan blog!!
 					</p>
 				</div>
 				<div id="category_content" class="sidebar-module">
