--- a/index_contex.html
+++ b/index_contex.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="blog-post">
 		<img class="blog-title img-circle pull-left" src="img/zk.jpg" style="margin-top: 0px; margin-right: 25px;">
-		<h1 class="blog-title" style="margin-top: 0px;">Acezk Blog</h1>
+		<h1 class="blog-title" style="margin-top: 0px;">Jokan Blog</h1>
 		<p class="lead blog-description">心思苍井丨梦似空</p>
 	</div>
 	<hr />
