--- a/index.html
+++ b/index.html
@@ -32,10 +32,7 @@
 			
 			<div class="col-sm-3 col-sm-offset-1 blog-sidebar">
 				<div class="sidebar-module sidebar-module-inset">
-					<h4>About</h4>
-					<p>
-						welcome to Jokan blog!!
-					</p>
+					<canvas id="canvas"></canvas>
 				</div>
 				<div id="category_content" class="sidebar-module">
 					
@@ -45,6 +42,8 @@
 	</div><!-- /.container -->
 	
 	<script src="jQuery/jquery-3.1.1.min.js"></script>
+	<script src="js/digit.js"></script>
+	<script src="js/time.js"></script>
 	<script src="js/index.js"></script>
 	<script type="text/javascript">
 	// 处理ifream加载
