--- a/index.html
+++ b/index.html
@@ -42,9 +42,12 @@
 	</div><!-- /.container -->
 	
 	<script src="jQuery/jquery-3.1.1.min.js"></script>
-	<script src="js/digit.js"></script>
-	<script src="js/time.js"></script>
+	<!-- 画点日期时间 -->
+	<script src="js/canvas/date_time/digit.js"></script>
+	<script src="js/canvas/date_time/time.js"></script>
+	
 	<script src="js/index.js"></script>
+	
 	<script type="text/javascript">
 	// 处理ifream加载
 	function iframeLoad() {
