--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Acezk Blog</title>
+<title>Jokan Blog</title>
 
 <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <link href="css/blog.css" rel="stylesheet">
